--- a/frontend/src/components/Login1.css
+++ b/frontend/src/components/Login1.css
@@ -1,17 +1,40 @@
-/* Login1.css */
-
 /* Container styling */
 .login-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+/* Video styling */
+.background-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -1;
+  transform: translate(-50%, -50%);
+  filter: blur(10px); /* Add blur effect */
+}
+
+/* Form container styling */
+.form-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   max-width: 400px;
-  margin: 0 auto;
   padding: 30px;
   border-radius: 10px;
-  background-color: rgb(243, 238, 234); /* Lighter color */
+  background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background color */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Title styling */
-.login-container h2 {
+.form-container h2 {
   text-align: center;
   margin-bottom: 30px;
   color: rgb(43, 69, 44); /* Darker color */
@@ -55,7 +78,7 @@
 button {
   width: 100%;
   padding: 12px;
-  color: rgb(43, 69, 44); /* Darker color */
+  background-color: rgb(82, 120, 83); /* Darker color */
   color: #ffffff;
   border: none;
   border-radius: 5px;
