--- a/frontend/src/components/Signup.css
+++ b/frontend/src/components/Signup.css
@@ -1,6 +1,10 @@
 .signup-container {
+  display: flex;
+  justify-content: center; /* Center the content horizontally */
+  align-items: center; /* Center the content vertically */
   max-width: 400px;
-  margin: 0 auto;
+ 
+  margin:  auto;
   padding: 30px;
   border-radius: 10px;
   background-color: rgb(243, 238, 234); /* Lighter color */
