--- a/frontend/src/pages/Aboutus.css
+++ b/frontend/src/pages/Aboutus.css
@@ -2,27 +2,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
 
 .about-us-container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-  font-family: 'Roboto', sans-serif;
-  background-color: #f4f4f4;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  text-align: left;
-}
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    font-family: 'Roboto', sans-serif;
+    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background color */
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    font-weight: bold; /* Make the font bold */
+  }
 
 .about-us-heading {
   font-size: 2rem;
   margin-bottom: 20px;
-  color: #333;
-  font-family: 'Roboto', sans-serif;
+  color: rgb(43, 69, 44); /* Darker color */
 }
 
 .about-us-content {
   font-size: 1.2rem;
   line-height: 1.6;
-  color: #555;
+  color: rgb(43, 69, 44); /* Darker color */
+  margin-top: 30px;
 }
 
 .about-us-content p {
@@ -34,26 +35,21 @@
 }
 
 .highlight {
-  color: #2e8b57;
+  color: rgb(43, 69, 44); /* Darker color */
   font-weight: bold;
-}
-
-/* Background gradient */
-.about-us-container {
-  background: linear-gradient(135deg, #64b5f6, #81c784);
 }
 
 /* Button styles */
 .button {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #2e8b57;
-  color: #fff;
+  background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background color */
+  color: rgb(43, 69, 44); /* Darker color */
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s;
 }
 
 .button:hover {
-  background-color: #255c3b;
+  background-color: rgba(255, 255, 255, 0.6); /* Semi-transparent background color on hover */
 }
