--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url('C:\Users\Lenovo\OneDrive\Desktop\mp1\MP1\frontend\src\pages\9166165.jpg');
+    background-image: url('9166165.jpg');
     background-size: cover;
     background-position: center;
     color: #045d32;
