--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,9 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.heading{
+  text-decoration: underline;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -22,6 +24,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  text-align: center;
 }
 
 .App-link {
